--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=AMazeUnreal
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+EditorStartupMap=/Game/Maze/NewWorld.NewWorld
+GameDefaultMap=/Game/Maze/NewWorld.NewWorld
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
